# LogReg

./: 2darray.csv  CovidData.txt  DxG.csv  DxG.txt  LR  LR.py  SCovid.py  Sandbox.py  pyproject.toml  test.py  thetas.csv
