[tool.poetry]
name = "logreg"
version = "0.1.0"
description = ""
authors = ["DavidFahrenheit <rmeveritt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0.0"
pandas = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
